--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Workshop on Verifiable Database Systems
 description: Co-located with SIGMOD 2023 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/logo.png
+avatar: logo.png
 
 #
 # Flags below are optional
