--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Workshop on Verifiable Database Systems
  
 # Short bio or description (displayed in the header)
-description: Co-located with SIGMOD 2023 
+description: 23th June 2023, co-located with ACM SIGMOD 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: logo.png
